opam-version: "2.0"
name: "opam-mirror"
version: "0.0.1"
maintainer: "Anil Madhavapeddy <anil@recoil.org>"
authors: "Anil Madhavapeddy <anil@recoil.org>"
homepage: "https://github.com/avsm/opam-mirror"
bug-reports: "https://github.com/avsm/opam-mirror/issues"
license: "ISC"
dev-repo: "git+https://github.com/avsm/opam-mirror.git"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
tags: [ "org:ocamllabs" "org:mirage" ]
depends: [
  "dune" {build & >= "1.0"}
  "cmdliner"
  "cohttp-lwt-unix" {>="1.0.0"}
  "lwt" {>="2.4.3"}
  "opam-repository" {>="2.0.0"}
  "tls"
  "lambda-term"
]
